--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                     </p>
                     <a class="card__link">
                         <h5 class="link__text">Learn more about accessibility</h5>
-                        <image class="link__chevron" src="src/Media/vector.svg"></image>
+                        <image class="link__vector" src="src/Media/vector.svg"></image>
                     </a>
                 </div>
             </div>
@@ -48,11 +48,12 @@
                     </p>
                     <a class="card__link">
                         <h5 class="link__text">Learn more about accessibility</h5>
-                        <image class="link__chevron" src="src/Media/vector.svg"></image>
+                        <image class="link__vector" src="src/Media/vector.svg"></image>
                     </a>
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
